--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/drrckchng/todo-list/issues"
   },
-  "homepage": "https://github.com/drrckchng/todo-list#readme"
+  "homepage": "https://github.com/drrckchng/todo-list#readme",
+  "devDependencies": {
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  }
 }
