--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@fontsource/lato": "^4.5.10",
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "material-icons": "^1.13.4"
   }
 }
